fix the group-containers (align center)

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -102,8 +102,11 @@ body {
     position: fixed;
     bottom: 0;
     left: 0;
-    width: 100%;
+    margin-left: 10%;
+    margin-right: 10%;
+    width: 80%;
     height: 70%;
+    align-items: center;
     overflow: auto; /* Kích hoạt cuộn ngang */
     padding: 10px 0;
     white-space: nowrap;
@@ -123,7 +126,7 @@ body {
 
 
 .group {
-    min-width: 200px; /* Ensure each group has enough space */
+    min-width: 250px; /* Ensure each group has enough space */
     flex-shrink: 0; /* Prevent shrinking */
 }
 
